Fixed issues with fancy box not showing up correctly in Firefox
git-tfs-work-item:1232 associate
git-tfs-id: [http://tfs.etg-inc.net:8080/tfs/Engage%20TFS%202010]$/Engage Events;C2170

--- a/Module.css
+++ b/Module.css
@@ -339,6 +339,8 @@ div#fancy_outer {
     overflow: hidden;
     background: transparent;
     display: none;
+    width: 600px;
+    height: 450px;
 }
 
 div#fancy_inner {
